--- a/app/src/main/res/layout-v23/activity_userdata.xml
+++ b/app/src/main/res/layout-v23/activity_userdata.xml
@@ -30,8 +30,7 @@
                 android:backgroundTint="@color/colorPrimary"
                 android:src="@drawable/user"
                 app:srcCompat="?android:attr/fingerprintAuthDrawable"
-                android:contentDescription="TODO"
-                tools:targetApi="m" />
+                android:contentDescription="TODO" />
         </androidx.cardview.widget.CardView>
         <LinearLayout
             android:id="@+id/user_name"
