--- a/app/src/main/res/layout/userslist.xml
+++ b/app/src/main/res/layout/userslist.xml
@@ -19,12 +19,12 @@
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="User Name"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="#E66F6F"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="10dp"></TextView>
+            android:layout_marginLeft="10dp"
+            android:text="User Name"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp"
+            android:textStyle="bold"></TextView>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -37,8 +37,10 @@
                 android:id="@+id/phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
                 android:src="@drawable/phone"
-                android:layout_marginRight="5dp"></ImageView>
+                app:srcCompat="@android:drawable/stat_sys_phone_call_forward"
+                tools:srcCompat="@android:drawable/stat_sys_phone_call_forward"></ImageView>
 
             <TextView
                 android:id="@+id/userphonenumber"
@@ -60,9 +62,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Rs."
+                android:textColor="@color/colorPrimary"
                 android:textSize="15sp"
-                android:textStyle="bold"
-                android:textColor="#E66F6F"></TextView>
+                android:textStyle="bold"></TextView>
 
             <TextView
                 android:id="@+id/balance"
