--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#E66F6F</color>
-    <color name="colorPrimaryDark">#E66F6F</color>
-    <color name="colorAccent">#E66F6F</color>
+    <color name="colorPrimary">#3a86ff</color>
+    <color name="colorPrimaryDark">#3a86ff</color>
+    <color name="colorAccent">#3a86ff</color>
 </resources>
