--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="64dp"
+        android:layout_marginBottom="50dp"
         android:gravity="center_horizontal"
         android:padding="10dp"
-        android:text="Banking System Application"
+        android:text="@string/app_name"
         android:textColor="#000"
         android:textSize="26sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -28,8 +29,9 @@
         android:layout_width="149dp"
         android:layout_height="58dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="65dp"
         android:background="@drawable/rounded_button"
-        android:backgroundTint="#E66F6F"
+        android:backgroundTint="@color/colorPrimary"
         android:paddingHorizontal="15dp"
         android:paddingVertical="5dp"
         android:text="View Users"
