--- a/app/src/main/res/layout/activity_sendtouser.xml
+++ b/app/src/main/res/layout/activity_sendtouser.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,18 +9,18 @@
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal|center_vertical"
-        android:textColor="#E66F6F"
-        android:textStyle="bold"
-        android:textSize="20sp"
         android:layout_marginVertical="10dp"
-        android:text="Select a user to transfer money"></TextView>
+        android:gravity="center_horizontal|center_vertical"
+        android:text="Transfer money to"
+        android:textColor="@color/colorPrimary"
+        android:textSize="20sp"
+        android:textStyle="bold"></TextView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
-        android:layout_below="@id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/text"
         android:padding="10dp"
         android:scrollbars="vertical" />
 </RelativeLayout>
