--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -8,24 +8,24 @@
         android:id="@+id/logo"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="150dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
         android:src="@drawable/bank"
-        android:visibility="invisible"/>
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/logo"
-        android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
-        android:text="BANKING SYSTEM"
+        android:layout_marginTop="30dp"
+        android:text="@string/app_name"
         android:textAllCaps="false"
-        android:textColor="#E66F6F"
+        android:textColor="@color/colorPrimary"
         android:textSize="28sp"
         android:textStyle="bold"
-        android:visibility="invisible"></TextView>
+        android:visibility="visible"></TextView>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -39,20 +39,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Developed by "
+            android:textColor="@color/colorPrimary"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="#E66F6F"
-            android:visibility="invisible"></TextView>
+            android:visibility="visible"></TextView>
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Harshit"
+            android:text="Prashant"
+            android:textColor="@color/colorPrimary"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:textColor="#E66F6F"
-            android:visibility="invisible"></TextView>
+            android:visibility="visible"></TextView>
     </LinearLayout>
 
 </RelativeLayout>
